--- a/src/main/resources/index.html
+++ b/src/main/resources/index.html
@@ -3,105 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <title>crash</title>
-    <style>
-        html,body{
-            padding: 0;
-            margin: 0;
-            width: 100%;
-            height: 100%;
-        }
-        #wrapper{
-            margin: 0 auto;
-            width: 100%;
-            height: 800px;
-            position: relative;
-            background: rgba(255,255,255,1);
-        }
-        #screen{
-            position: relative;
-            top: 150px;
-            width: 900px;
-            height: 500px;
-            margin: 0 auto;
-            padding: 0;
-        }
-        #screen-show{
-            position: absolute;
-            width: 700px;
-            height: 600px;
-            margin: 0;
-            padding: 0;
-        }
-        #screen-operation{
-            position: absolute;
-            float: right;
-            right: 0;
-            width: 200px;
-            height: 600px;
-            margin: 0;
-            padding: 0;
-        }
-        #content{
-            position: absolute;
-            top: 220px;
-            left: 320px;
-            transform-style: preserve-3d;
-            perspective-origin: 50% 50%;
-            width: 60px;
-            height: 60px;
-        }
-        .cube{
-            position: absolute;
-            transform-style: preserve-3d;
-            perspective-origin: 50% 50%;
-            width: 60px;
-            height: 60px;
-            left: 0;
-            top: 0;
-        }
-        .selected > div{
-            background-color: rgba(255,0,0,0.1);
-        }
-        #c3{
-            transform: translateX(0px) translateY(0px) translateZ(-60px);
-        }
-        .surface{
-            position: absolute;
-            transform-style: preserve-3d;
-            perspective-origin: 50% 50%;
-            width: 60px;
-            height: 60px;
-            background-color: rgba(200,200,200,0.3);
-            box-shadow: inset 0 0 10px  rgba(125,125,125,0.2);
-        }
-        .front{
-            transform: translateZ(30px);
-        }
-        .back{
-            transform: translateZ(-30px) rotateY(180deg);
-        }
-        .left{
-            transform: translateX(-30px) rotateY(90deg);
-        }
-        .right{
-            transform: translateX(30px) rotateY(-90deg);
-        }
-        .top{
-            transform: translateY(30px) rotateX(90deg);
-        }
-        .bottom{
-            transform: translateY(-30px) rotateX(-90deg);
-        }
-    </style>
+    <link href="css/style.css" rel="stylesheet" />
 </head>
-<script>
-    const LEFT = "left";
-    const RIGHT = "right";
-    const TOP = "top";
-    const BOTTOM = "bottom";
-    const FRONT = "front";
-    const BACK = "back";
-</script>
 <body>
     <div id="wrapper">
         <div id="screen">
@@ -135,6 +38,9 @@
                 <button onclick="addY('bottom')">下</button>
                 <button onclick="addZ('front')">前</button>
                 <button onclick="addZ('back')">后</button>
+                <button onclick="mainView()">主</button>
+                <button onclick="leftView()">左</button>
+                <button onclick="topView()" class="aButton">俯</button>
             </div>
         </div>
     </div>
@@ -270,6 +176,27 @@
             content.appendChild(cubeN);
             SelectedCube = null;
             resetCubeClass();
+        }
+        function mainView(){
+            content.style.animation = "mainTransform 2s forwards";
+            setTimeout(() => {
+                content.style.transform = "rotateX(0deg) rotateY(0deg)" ;
+                content.style.animation = "" ;
+            },2000)
+        }
+        function leftView(){
+            content.style.animation = "leftTransform 2s forwards";
+            setTimeout(() => {
+                content.style.transform = "rotateX(0deg) rotateY(90deg)" ;
+                content.style.animation = "" ;
+            },2000)
+        }
+        function topView(){
+            content.style.animation = "topTransform 2s forwards";
+            setTimeout(() => {
+                content.style.transform = "rotateX(-90deg) rotateY(0deg)" ;
+                content.style.animation = "" ;
+            },2000)
         }
     </script>
 </body>
