--- a/src/main/resources/turntable.html
+++ b/src/main/resources/turntable.html
@@ -35,46 +35,58 @@
 <!--<script src="./js/lucky-canvas.umd.min.js"></script>-->
 <script src="./js/lucky.js"></script>
 <script>
-    // 设置奖品
-    const prizes = []
-    let data = ['煮面', '紫菜卷', '麻辣烫', '五爷拌面', '烧烤', '西餐', '苕粉']
-    data.forEach((item, index) => {
-        prizes.push({
-            title: item,
-            background: index % 2 ? '#ffffff' : '#ffffff',
-            fonts: [{ text: item, top: '24%',fontSize: '30px',fontColor: '#000000',fontFamily: 'tiansu' }],
-            // imgs:[{ src: `./img/${index}.png`, width: '30%', top: '35%' }],
+    fetch('https://www.hongxiaoqi.cn/turntable/prizes')
+        .then(function(response){
+            return response.json();
         })
-    })
-    // 创建大转盘抽奖
-    let luckyWheel = new LuckyCanvas.LuckyWheel({
-        el: '#my-lucky',
-        width: '300px',
-        height: '300px',
-    }, {
-        prizes: prizes,
-        defaultStyle: {
-            fontColor: '#000000',
-            fontSize: '14px'
-        },
-        blocks: [
-            { padding: '3px', background: '#000000' }
-        ],
-        buttons: [
-            { radius: '16px', background: '#f6c66f', pointer: false ,
-                imgs: [{ src: `./pointer.png`,top: '-75px'}]
-            },
-        ],
-        start () {
-            luckyWheel.play()
-            setTimeout(() => {
-                luckyWheel.stop(Math.random() * 8 >> 0)
-            }, 3000)
-        },
-        end (prize) {
-            alert(`恭喜你获得${prize.title}`)
-        },
-    })
+        .then(function(jsonData){
+            // 设置奖品
+            const prizes = [];
+            let data = jsonData || ['煮面', '紫菜卷', '麻辣烫', '五爷拌面', '烧烤', '西餐', '苕粉'];
+            data.forEach((item, index) => {
+                prizes.push({
+                    title: item,
+                    background: index % 2 ? '#ffffff' : '#ffffff',
+                    fonts: [{ text: item, top: '24%',fontSize: '30px',fontColor: '#000000',fontFamily: 'tiansu' }],
+                    // imgs:[{ src: `./img/${index}.png`, width: '30%', top: '35%' }],
+                })
+            })
+            // 创建大转盘抽奖
+            let luckyWheel = new LuckyCanvas.LuckyWheel({
+                el: '#my-lucky',
+                width: '300px',
+                height: '300px',
+            }, {
+                prizes: prizes,
+                defaultStyle: {
+                    fontColor: '#000000',
+                    fontSize: '14px'
+                },
+                blocks: [
+                    { padding: '3px', background: '#000000' }
+                ],
+                buttons: [
+                    { radius: '16px', background: '#f6c66f', pointer: false ,
+                        imgs: [{ src: `./pointer.png`,top: '-75px'}]
+                    },
+                ],
+                start () {
+                    luckyWheel.play();
+                    fetch('https://www.hongxiaoqi.cn/turntable/result')
+                        .then(function(response){
+                            return response.json();
+                        })
+                        .then(function(jsonData){
+                            setTimeout(() => {
+                                luckyWheel.stop(jsonData)
+                            }, 2000)
+                        })
+                },
+                end (prize) {
+                    alert(`恭喜你获得${prize.title}`)
+                },
+            })
+        })
 </script>
 </body>
 </html>
